# Ravine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Ravine.code-workspace  Ravine.sln  Ravine.sln.DotSettings  TODO.md  conanfile.txt  setup.bat  setup.sh  setup_force_clang.sh
Ravine/: .gitignore  EASTL_new.cpp  EASTL_new.h  ImGUI.cpp  ImGUITest.hpp  ProgressiveMesh.h  RVConfig.h  RVDataTypes.h  RVDevice.cpp  RVDevice.h  RVGraphicsPipeline.cpp  RVGraphicsPipeline.h  RVRenderPass.cpp  RVRenderPass.h  RVSwapChain.cpp  RVSwapChain.h  RVUniformTypes.h  Ravine - Atalho.lnk  Ravine.cpp  Ravine.h  Ravine.vcxproj  Ravine.vcxproj.filters  RvAnimationTools.cpp  RvAnimationTools.h  RvCamera.cpp  RvCamera.h  RvCmdBuffer.cpp  RvCmdBuffer.h  RvConfig.cpp  RvConfig.h  RvDataTypes.h  RvDebug.cpp  RvDebug.h  RvDevice.cpp  RvDevice.h  RvDynamicBuffer.cpp  RvDynamicBuffer.h  RvFramebufferAttachment.h  RvGUI.cpp  RvGUI.h  (+51 more)
Ravine/SingleFileLibraries/: imgui_impl_vulkan.h
include/EASTL/internal/: config.h
include/assimp/: defs.h
include/glfw/: glfw3.h
include/miniz/: miniz.h
lib/x64/: EAStdC.lib  assimp64.lib  glm_static.lib  shaderc_shared.lib
lib/x64/Debug/: EASTL.lib  EAStdC.lib  glfw3.lib
lib/x64/Release/: EASTL.lib  EAStdC.lib  fmt.lib  glfw3.lib
lib/x86/: .gitignore  EAStdC.lib  assimp32.lib  glm_static.lib  shaderc_shared.lib
lib/x86/Debug/: EASTL.lib  EAStdC.lib  fmt.lib  glfw3.lib
lib/x86/Release/: EASTL.lib  EAStdC.lib  fmt.lib  glfw3.lib
licensing/: FMT.txt  Volk.txt
src/: EASTL_new.cpp  EASTL_new.h  ModelTool.OpenFBX.cpp  Ravine.cpp  Ravine.h  RvAnimationTools.cpp  RvAnimationTools.h  RvCamera.cpp  RvConfig.cpp  RvConfig.h  RvDataTypes.h  RvDevice.cpp  RvDevice.h  RvDevicesManager.h  RvDynamicBuffer.h  RvGUI.cpp  RvGUI.h  RvGUIPipeline.cpp  RvGraphicsPipeline.cpp  RvLinePipeline.cpp  RvLinePipeline.h  RvMeshLoaderUniqueVertex.txt  RvPersistentBuffer.cpp  RvPersistentBuffer.h  RvPhysics.cpp  RvPhysics.h  RvPolygonPipeline.cpp  RvPolygonPipeline.h  RvRenderPass.cpp  RvRenderPass.h  RvShaderManager.h  RvStdDefs.h  RvSwapChain.h  RvTools.cpp  RvTools.h  RvUniformTypes.h  RvWindow.h  RvWireframePipeline.cpp  crc32.hpp  imgui_impl_vulkan.cpp  (+1 more)
